edited pom.xml